fix IE10's flexbox alignment in the toc header
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@43743 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -153,6 +153,7 @@
 
 		display: -ms-flexbox;
 		-ms-box-orient: horizontal;
+		-ms-flex-align: center;
 
 		@include experimental-value(display, flex);
 		@include experimental(flex-wrap, nowrap);
